safe commit before change Place component from class to function